@@ -22,6 +22,8 @@ kotlin {
             implementation(libs.kommand)
             // https://mvnrepository.com/artifact/com.github.kwhat/jnativehook
             implementation("com.github.kwhat:jnativehook:2.2.2")
+            // use api since the desktop app need to access the Cef to initialize it.
+            api("io.github.kevinnzou:compose-webview-multiplatform:1.9.20")
         }
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
@@ -38,6 +40,22 @@ compose.desktop {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "org.example.kmpdesktop"
             packageVersion = "1.0.0"
+        }
+        buildTypes.release.proguard {
+            configurationFiles.from("compose-desktop.pro")
+        }
+    }
+}
+
+afterEvaluate {
+    tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
         }
     }
 }
